--- a/css/form.css
+++ b/css/form.css
@@ -4,6 +4,8 @@
 }
 
 .form__section--button {
+	justify-content: center;
+	align-content: center;
 	margin: 20px;
 	background-color: teal;
 	color: white;
@@ -33,7 +35,20 @@
 }
 
 @media (max-width: 767px) {
+
+	.container {
+		margin: 5px;
+	}
+
+	.header {
+		margin: 25px 5px 20px 5px;
+	}
+
     .form__section--button {
         width: 100%;
     }
+
+	.form__section--input {
+		width: 100%;
+	}
 }
